# chromatui

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-OPENAI-ANTHROPIC-RIDER.md  README.md  SECURITY.md  SUPPORT.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
crates/chromatui/: Cargo.toml
crates/chromatui-algorithms/: Cargo.toml
crates/chromatui-algorithms/src/: lib.rs
crates/chromatui-core/: Cargo.toml
crates/chromatui-core/src/: backend.rs  lib.rs  parser.rs  runtime.rs
crates/chromatui-declarative/: Cargo.toml
crates/chromatui-declarative/src/: lib.rs
crates/chromatui-extras/: Cargo.toml
crates/chromatui-extras/src/: lib.rs
crates/chromatui-harness/: Cargo.toml
crates/chromatui-harness/src/: lib.rs
crates/chromatui-layout/: Cargo.toml
crates/chromatui-layout/src/: flex.rs  grid.rs  lib.rs
crates/chromatui-pty/: Cargo.toml
crates/chromatui-pty/src/: lib.rs
crates/chromatui-render/: Cargo.toml
crates/chromatui-render/benches/: diff_bench.rs
crates/chromatui-render/src/: diff.rs  lib.rs  no_flicker_proof.rs  presenter.rs  viewport.rs
crates/chromatui-runtime/: Cargo.toml
crates/chromatui-runtime/examples/: visual_validation.rs
crates/chromatui-runtime/src/: lib.rs
crates/chromatui-simd/: Cargo.toml
crates/chromatui-simd/src/: lib.rs
crates/chromatui-style/: Cargo.toml
crates/chromatui-style/src/: color.rs  lib.rs  theme.rs
crates/chromatui-text/: Cargo.toml
crates/chromatui-text/src/: lib.rs
crates/chromatui-widgets/: Cargo.toml
crates/chromatui-widgets/src/: lib.rs
crates/chromatui/src/: lib.rs
docs/: architecture.md  conformance-matrix.md
docs/plans/: 2026-02-22-kernel-tui-foundation-design.md  2026-02-22-kernel-tui-foundation.md
examples/: simple_chat.rs
src/: lib.rs
src/inline/: mod.rs
src/kernel/: backend.rs  mod.rs  parser.rs  types.rs
src/runtime/: state.rs
src/viewport/: mod.rs
tests/: inline.rs  kernel_parser.rs  kernel_types.rs  renderer.rs  runtime.rs  viewport.rs
