[package]
name = "chromatui-extras"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
syntax-highlighting = []

[dependencies]
chromatui-core = { path = "../chromatui-core" }
chromatui-render = { path = "../chromatui-render" }
chromatui-widgets = { path = "../chromatui-widgets" }
