[package]
name = "chromatui-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chromatui-core = { path = "../chromatui-core" }
chromatui-layout = { path = "../chromatui-layout" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "diff_bench"
harness = false
